--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <html lang="en">
-  <head>
-    <link rel="styesheet" href="style.css" />
-    <title>Calculator</title>
-  </head>
 
-  <body></body>
+<head>
+  <link rel="styesheet" href="style.css" />
+  <title>Calculator</title>
+</head>
+
+<body>
+  <div id="frame">
+    <div id="screen"></div>
+    <div id="button-container">
+      <div class="button">0</div>
+      <div class="button">1</div>
+      <div class="button">2</div>
+      <div class="button">3</div>
+      <div class="button">4</div>
+      <div class="button">5</div>
+      <div class="button">6</div>
+      <div class="button">7</div>
+      <div class="button">8</div>
+      <div class="button">9</div>
+      <div class="button">+</div>
+      <div class="button">-</div>
+      <div class="button">*</div>
+      <div class="button">/</div>
+    </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+
 </html>
-l
