--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <link rel="styesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" />
   <title>Calculator</title>
 </head>
 
@@ -9,6 +9,8 @@
   <div id="frame">
     <div id="screen"></div>
     <div id="button-container">
+      <div class="button">DEL</div>
+      <div class="button">CE</div>
       <div class="button">0</div>
       <div class="button">1</div>
       <div class="button">2</div>
@@ -22,7 +24,9 @@
       <div class="button">+</div>
       <div class="button">-</div>
       <div class="button">*</div>
-      <div class="button">/</div>
+      <div class="button">÷</div>
+      <div class="button">=</div>
+      <div class="button">.</div>
     </div>
   </div>
   <script src="script.js"></script>
