updated for input and buttons

--- a/index.html
+++ b/index.html
@@ -7,27 +7,25 @@
 
 <body>
   <div id="frame">
-    <div id="screen"></div>
-    <div id="button-container">
-      <div class="button">DEL</div>
-      <div class="button">CE</div>
-      <div class="button">0</div>
-      <div class="button">1</div>
-      <div class="button">2</div>
-      <div class="button">3</div>
-      <div class="button">4</div>
-      <div class="button">5</div>
-      <div class="button">6</div>
-      <div class="button">7</div>
-      <div class="button">8</div>
-      <div class="button">9</div>
-      <div class="button">+</div>
-      <div class="button">-</div>
-      <div class="button">*</div>
-      <div class="button">÷</div>
-      <div class="button">=</div>
-      <div class="button">.</div>
-    </div>
+    <input type="text" id="screen" name="screen">
+    <button class="button" id="del">DEL</button>
+    <button class="button" id="ce">CE</button>
+    <button class="button">0</button>
+    <button class="button">1</button>
+    <button class="button">2</button>
+    <button class="button">3</button>
+    <button class="button">4</button>
+    <button class="button">5</button>
+    <button class="button">6</button>
+    <button class="button">7</button>
+    <button class="button">8</button>
+    <button class="button">9</button>
+    <button class="button">+</button>
+    <button class="button">-</button>
+    <button class="button">*</button>
+    <button class="button">÷</button>
+    <button class="button">=</button>
+    <button class="button">.</button>
   </div>
   <script src="script.js"></script>
 </body>
