finished calculator design

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <body>
   <div id="frame">
-    <input type="text" id="screen" name="screen">
+    <input type="text" id="screen">
 
-    <button class="button" id="ce">CE</button>
-    <button class="button" id="del">DEL</button>
+    <button class="button-cd">CE</button>
+    <button class="button-cd">DEL</button>
 
     <button class="button">7</button>
     <button class="button">8</button>
