--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     <button class="button">.</button>
     <button class="button">0</button>
     <button class="button">=</button>
-    <button class="button">÷</button>
+    <button class="button">/</button>
 
   </div>
   <script src="script.js"></script>
+  <script src="node_modules/mathjs/lib/browser/math.js" type="text/javascript"></script>
 </body>
 
 </html>
