--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+  <meta charset="utf-8">
   <link rel="stylesheet" href="style.css" />
   <title>Calculator</title>
 </head>
@@ -34,7 +35,7 @@
 
   </div>
   <script src="script.js"></script>
-  <script src="node_modules/mathjs/lib/browser/math.js" type="text/javascript"></script>
+  <script src="math.js"></script>
 </body>
 
 </html>
