--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div id="frame">
-    <input type="text" value="" id="screen">
+    <input readonly type="text" value="" id="screen">
 
     <button class="button-cd" id="CE">CE</button>
     <button class="button-cd" id="DEL">DEL</button>
